# babytorch

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json  Justfile  README.md  babytorch.txt  vcpkg.json
cmake/: print-source-files.cmake
docs/: README.md
src/: autodiff.cpp  autodiff.hpp  functions.cpp  functions.hpp  main.cpp  operators.cpp  operators.hpp  scalar.cpp  scalarlike.hpp
src/babytorch/: autodiff.cpp  autodiff.hpp  functions.cpp  functions.hpp  generic_operators.hpp  operators.cpp  operators.hpp  ptr.hpp  scalar.cpp  scalar.hpp  scalarlike.hpp  tensor.cpp  tensor.hpp  tensor_autodiff.cpp  tensor_autodiff.hpp  tensor_data.cpp  tensor_data.hpp  tensor_functions.cpp  tensor_functions.hpp  tensor_ops.cpp  tensor_ops.hpp  utils.cpp  utils.hpp
tests/: operators.cpp  test_operators.cpp  test_scalar.cpp  test_tensor_indexing.cpp
tools/: check_setup.sh  concat.sh  deps.py
